Corrected .css left side squishing concern:

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,23 +2,20 @@
     --light-blue: #58bac1;
   }
 
-  body {
-    background-color: #606060;
-  }
-
-
-  *{
-    padding: 0 ;
+  * {
+    padding: 0;
     margin: 0;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
   }
 
-  nav {
-  background: #58bac1;
-  height: 46px;
-  width: 100%;
+  a {
+    color: black;
+  }
+
+  body {
+    background-color: #606060;
   }
 
   header {
@@ -27,6 +24,7 @@
     color: #58bac1;
     font-size: 50px;
     font-weight: bold;
+    margin: 100px 0px 0 0;
   }
 
   sub {
@@ -40,39 +38,101 @@
     flex-direction: column;
     justify-content: center;
     padding: 12px 12px;
+    margin: 200px 20px 20px 20px;
     background-color: white;
-    border-style: solid;
-    border-width: 1px;
+    border-style: 1px solid;
     border-radius: 20px;
+    box-shadow: 10px 10px 20px;
+    max-width: 2000px;
   }
 
-  nav ul {
+  .description div ul {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     height: 46px;
     align-items: center;
+    padding: 60px 0px;
   }
 
-  nav ul li {
-    list-style-type: none;
+  .description div ul li {
+    background-color: #58bac1;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 1.5em;
+    box-shadow: 2px 2px 2px;
   }
-  
+
   .bio {
     margin: 20px 20px;
   }
 
-  .projects-section {
-    margin: 20px 0px;
+  .short-bio {
+    display: flex;
+    justify-content: center;
+    padding: 12px 12px;
+    margin: 2% 11% 15% 11%;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px;
+    font-size: 20px;
   }
 
   .project {
     background-image: url(./images/coding-background.jpg);
     background-repeat: no-repeat;
-    /* width: 100%; */
+    width: 100%;
     height: 200px;
-    flex-basis: calc(50% - 1em);
-    margin: 5px;
+    flex-basis: calc(50% - 2em);
+    margin: 8px;
   }
+
+  .projects-section {
+    display: flex;
+    align-items: center;
+    margin: 20px 0px;
+    box-sizing: border-box;
+  }
+
+  .projects-section2 {
+    display: flex;
+    align-items: flex-end;
+    margin: 20px 0px;
+    box-sizing: border-box;
+  }
+
+  .project-class {
+    display: flex;
+    background-color: #58bac1;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 200px 0 0 20px;
+    font-size: 1.5em;
+    box-shadow: 2px 2px 2px;
+    max-width: 50%;
+  }
+
+  .project-class2 {
+    display: flex;
+    justify-content: flex-end;
+    background-color: #58bac1;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 200px 0 0 20px;
+    font-size: 1.5em;
+    box-shadow: 2px 2px 2px;
+    max-width: 50%;
+  }
+
+
 
   .project-text {
     color: black;
@@ -90,39 +150,74 @@
 
   #project1 {
     flex-basis: 100%;
-    justify-self: center;
+    justify-content: center;
+    margin: 20px;
   }
 
   .projects-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    box-sizing: border-box;
   }
 
-  .description div ul {
+
+
+
+  img {
+    display: block;
+    margin: auto;
+    height: auto;
+    max-width: 400px;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-top: 4%;
+    margin-bottom: 1%;
+    box-shadow: 5px 5px 10px;
+  }
+
+
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: black;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    margin: 3% 3% 0 3%;
+  }
+
+  .footer div h3 {
+    display: flex;
+    justify-content: center;
+    padding: 25px 0 10px 0;
+  }
+
+  .footer ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 10px;
+  }
+
+
+
+
+  /* nav {
+    background: #58bac1;
+    height: 46px;
+    width: 100%;
+  }
+
+  nav ul {
     display: flex;
     justify-content: space-evenly;
     height: 46px;
     align-items: center;
-    padding: 60px 0px;
   }
 
-  .description div ul li {
-    background-color: #58bac1;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 10px;
-    padding: 10px;
-    font-size: 1.5em;
-  }
-
-img {
-  border-radius: 20px;
-  box-shadow: #606060;
-  border: 2px solid black;
-  border-radius: 5px;
-}
-
-a {
-  color: black;
-}
+  nav ul li {
+    list-style-type: none;
+  } */
